--- a/package.json
+++ b/package.json
@@ -15,10 +15,39 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/inter": "^4.5.0",
+    "@fontsource/montserrat": "^4.5.1",
+    "@fontsource/poppins": "^4.5.0",
+    "@fontsource/space-mono": "^4.5.0",
+    "@material-ui/core": "^4.12.3",
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.21.4",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^8.6.0",
     "gatsby": "^4.1.0",
     "gatsby-plugin-sass": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "node-sass": "^6.0.1",
+    "process": "^0.11.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.43.4"
+    "react-icons": "^4.3.1",
+    "react-jwt": "^1.1.4",
+    "react-redux": "^7.2.6",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "sass": "^1.43.4",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.4",
+    "vanilla-tilt": "^1.7.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "gatsby-plugin-postcss": "^5.1.0",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19"
   }
 }
