--- a/package.json
+++ b/package.json
@@ -26,17 +26,21 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^8.6.0",
     "gatsby": "^4.1.0",
+    "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-sass": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "node-sass": "^6.0.1",
     "process": "^0.11.10",
     "react": "^17.0.1",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
     "react-jwt": "^1.1.4",
     "react-redux": "^7.2.6",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "sass": "^1.43.4",
     "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
